added dynamic inputs for certain algorithm select options

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Simple Substitution Cipher
               </option>
             </select>
-            <div id="caesar-config" style="display: none">
+            <div id="caesar-config">
               <br />
               <br />
               <label for="caesar-shift-input">Shift number:</label>
@@ -121,5 +121,6 @@
     </footer>
 
     <script src="dom.js"></script>
+    <script src="algorithms.js"></script>
   </body>
 </html>
